--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-		<title>new_file</title>
+		<title>Instructions</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Joe Bologna" />
 
@@ -20,10 +20,15 @@
 			body {
 				background: #FFFFBB;
 			}
+			.ipad {
+				font-size: 24pt;
+			}
+			.iphone {
+				font-size: 12pt;	
+			}
 		</style>
 	</head>
-
-	<body>
+	<body id="ZZZ" class="iphone">
 		<div>
 			To determine which item is a better deal, enter the price, number of units and number of items for each product.
 		</div>
@@ -51,5 +56,10 @@
 		<p>
 			Use the Remove Ads button to opt out of receiving ads. Use the Restore button to restore your purchase onto your other iPads or iPhones.
 		</p>
+        <script>
+            var f = innerWidth > 320 ? "ipad" : "iphone";
+            document.getElementById("ZZZ").className = f;
+            //alert(document.getElementById("ZZZ").className);
+        </script>
 	</body>
 </html>
