major clean up to fix missing .png files in 1.4 and add drawerController, etc.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,6 +51,9 @@
 			<img src="Mints-6items.png" width="100%">
 		</div>
 		<p>
+            When you are Done, this example will be shown in the app so you can try it for yourself.
+		</p>
+		<p>
 			Savings are the total number of units purchased times the difference in unit cost.
 		</p>
 		<p>
