updated example. fixed how qty field is filled in.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,22 +33,45 @@
 			To determine which item is a better deal, enter the price, number of units and number of items for each product.
 		</div>
 		<p>
-			 For example, you have a choice between two different brands of mints.
+        To compare two items, just enter the price shown on the label for each item. The number of units and quantity will be automatically set to 1. For instance:
+		</p>
+        <dd>
+            $1.69 for 1 lbs<br/>
+            $2.69 for 1 lbs<br/>
+        </dd>
+		<p>
+        Enter the products as follows:
 		</p>
 		<div>
-			<img src="Mints-Note.png" width="100%">
-		</div>
+			<img src="meat.png" width="100%">
+                </div>
+		<p>
+        A is a better deal. Set the quantity using the slider or by entering a value in the Qty field. 2.75 lbs for instance.
+		</p>
+		<div>
+			<img src="meat-qty.png" width="100%">
+        </div>
+		<p>
+        Total cost is $4.65 saving $2.75.
+		</p>
+		<p>
+			Some deals require a minimum purchase. In this case you must enter the number of items. For example, consider a choice between two brands of mints:
+		</p>
+        <dd>
+            3 mints for $4, 4.67 oz ea.<br/>
+            2 mints for $5, 12 oz ea.<br/>
+        </dd>
 		<p>
 			Enter the products as follows:
 		</p>
 		<div>
-			<img src="Mints-Entered.png" width="100%">
+			<img src="Mints-6items.png" width="100%">
 		</div>
 		<p>
 		B is a better deal. If you want to purchase 6 items, use the slider to see your total savings.
 		</p>
 		<div>
-			<img src="Mints-6items.png" width="100%">
+			<img src="Mints-Entered.png" width="100%">
 		</div>
 		<p>
             When you are Done, this example will be shown in the app so you can try it for yourself.
